user login requires formatted phone number

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -33,6 +33,10 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
+        <label for="phone-number-signup">phone number: format: xxx-xxx-xxxx</label>
+        <input class="form-input" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" id="phone-number-signup" />
+      </div>
+      <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
     </form>
