--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,20 +6,33 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>Stuck? Create a New Post:</h3>
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
+        <label for="project-name">post title:</label>
         <input class="form-input" type="text" id="project-name" name="project-name" />
-      </div>
-      <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
       </div>
       <div class="form-group">
         <label for="project-desc">description:</label>
         <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
+      </div>
+      <label for="contact_method">Contact Method:</label>
+      <div class="form-group"></div>
+      <select class="form-input" name="contact_method" id="contact_method">
+        <option value="call">Call</option>
+        <option value="text">Text</option>
+        <option value="email">Email</option>
+      </select>
+      </div>
+
+      <div class="form-group">
+        <label for="vehicle_make">Vehicle Make:</label>
+        <textarea class="form-input" id="vehicle_make" name="vehicle_make"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="vehicle_model">Vehicle Model:</label>
+        <textarea class="form-input" id="vehicle_model" name="vehicle_model"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
@@ -27,20 +40,18 @@
     </form>
   </div>
 
-  {{#if projects.length}}
+  {{#if post.length}}
   <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+    <h3>Current Post:</h3>
 
-    {{#each projects as |project|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
+        <h4><a href="/project/{{post.id}}">{{post.name}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
       </div>
     </div>
-    {{/each}}
   </div>
   {{/if}}
 </div>
