--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -5,37 +5,37 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-/*html {
-  /*line-height: 1.15;
+html {
+  line-height: 1.15;
   /* 1 */
-  /*-webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
   /* 2 */
-/* } */
+}
 
 /* Sections
    ========================================================================== */
 /**
  * Remove the margin in all browsers.
  */
-/* body {
+body {
   margin: 0;
-} */
+}
 
 /**
  * Render the `main` element consistently in IE.
  */
-/* main {
+main {
   display: block;
-} */
+}
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
-/* h1 {
+h1 {
   font-size: 2em;
   margin: 0.67em 0;
-} */
+}
 
 /* Grouping content
    ========================================================================== */
@@ -43,81 +43,81 @@
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
-/* hr {
-  box-sizing: content-box; */
+hr {
+  box-sizing: content-box;
   /* 1 */
-  /*height: 0;
+  height: 0;
   /* 1 */
-  /*overflow: visible;
+  overflow: visible;
   /* 2 */
-/*}
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-/* pre { */
-  /*font-family: monospace, monospace;
+pre {
+  font-family: monospace, monospace;
   /* 1 */
-  /*font-size: 1em;
+  font-size: 1em;
   /* 2 */
-/*}
+}
 
 /* Text-level semantics
    ========================================================================== */
 /**
  * Remove the gray background on active links in IE 10.
  */
-/* a {
+a {
   background-color: transparent;
-} */
+}
 
 /**
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
-/* abbr[title] {
-  border-bottom: none; */
+abbr[title] {
+  border-bottom: none;
   /* 1 */
-  /*text-decoration: underline;
+  text-decoration: underline;
   /* 2 */
-  /*text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
-/*}
+}
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
-/* b,
+b,
 strong {
   font-weight: bolder;
-} */
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-/* code,
+code,
 kbd,
-samp { */
-  /*font-family: monospace, monospace;
+samp {
+  font-family: monospace, monospace;
   /* 1 */
-  /*font-size: 1em;
+  font-size: 1em;
   /* 2 */
-/*}
+}
 
 /**
  * Add the correct font size in all browsers.
  */
-/* small {
+small {
   font-size: 80%;
-} */
+}
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
-/* sub,
+sub,
 sup {
   font-size: 75%;
   line-height: 0;
@@ -131,16 +131,16 @@ sub {
 
 sup {
   top: -0.5em;
-} */
+}
 
 /* Embedded content
    ========================================================================== */
 /**
  * Remove the border on images inside links in IE 10.
  */
-/* img {
+img {
   border-style: none;
-} */
+}
 
 /* Forms
    ========================================================================== */
@@ -148,78 +148,78 @@ sup {
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
-/* button,
+button,
 input,
 optgroup,
 select,
-textarea { */
-  /*font-family: inherit;
+textarea {
+  font-family: inherit;
   /* 1 */
-  /*font-size: 100%;
+  font-size: 100%;
   /* 1 */
-  /*line-height: 1.15;
+  line-height: 1.15;
   /* 1 */
-  /*margin: 0;
+  margin: 0;
   /* 2 */
-/*}
+}
 
 /**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */
-/* button,
-input { */
+button,
+input {
   /* 1 */
-  /* overflow: visible;
-} */
+  overflow: visible;
+}
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */
-/* button,
-select { */
+button,
+select {
   /* 1 */
-  /* text-transform: none;
-} */
+  text-transform: none;
+}
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
  */
-/* button,
+button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
   -webkit-appearance: button;
-} */
+}
 
 /**
  * Remove the inner border and padding in Firefox.
  */
-/* button::-moz-focus-inner,
+button::-moz-focus-inner,
 [type='button']::-moz-focus-inner,
 [type='reset']::-moz-focus-inner,
 [type='submit']::-moz-focus-inner {
   border-style: none;
   padding: 0;
-} */
+}
 
 /**
  * Restore the focus styles unset by the previous rule.
  */
-/* button:-moz-focusring,
+button:-moz-focusring,
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText;
-} */
+}
 
 /**
  * Correct the padding in Firefox.
  */
-/* fieldset {
+fieldset {
   padding: 0.35em 0.75em 0.625em;
-} */
+}
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -227,122 +227,122 @@ select { */
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers.
  */
-/*legend {
+legend {
   box-sizing: border-box;
   /* 1 */
-  /*color: inherit;
+  color: inherit;
   /* 2 */
-  /*display: table;
+  display: table;
   /* 1 */
-  /*max-width: 100%;
+  max-width: 100%;
   /* 1 */
-  /*padding: 0;
+  padding: 0;
   /* 3 */
-  /*white-space: normal;
+  white-space: normal;
   /* 1 */
-/*}
+}
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
-/* progress {
+progress {
   vertical-align: baseline;
-} */
+}
 
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
-/* textarea {
+textarea {
   overflow: auto;
-} */
+}
 
 /**
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-/* [type='checkbox'],
+[type='checkbox'],
 [type='radio'] {
-  box-sizing: border-box; */
+  box-sizing: border-box;
   /* 1 */
-  /*padding: 0;
+  padding: 0;
   /* 2 */
-/*}
+}
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-/* [type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-inner-spin-button,
 [type='number']::-webkit-outer-spin-button {
   height: auto;
-} */
+}
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-/* [type='search'] {
-  -webkit-appearance: textfield; */
+[type='search'] {
+  -webkit-appearance: textfield;
   /* 1 */
-  /*outline-offset: -2px;
+  outline-offset: -2px;
   /* 2 */
-/*}
+}
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-/* [type='search']::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
-} */
+}
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
-/* ::-webkit-file-upload-button {
-  -webkit-appearance: button; */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
   /* 1 */
-  /*font: inherit;
+  font: inherit;
   /* 2 */
-/*}
+}
 
 /* Interactive
    ========================================================================== */
 /*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
-/* details {
+details {
   display: block;
-} */
+}
 
 /*
  * Add the correct display in all browsers.
  */
-/* summary {
+summary {
   display: list-item;
-} */
+}
 
 /* Misc
    ========================================================================== */
 /**
  * Add the correct display in IE 10+.
  */
-/* template {
+template {
   display: none;
-} */
+}
 
 /**
  * Add the correct display in IE 10.
  */
-/* [hidden] {
+[hidden] {
   display: none;
-} */
+}
 
 /* 
 =================
 END NORMALIZE CSS
 =================
 */
-/* *,
+*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -427,10 +427,10 @@ a {
 a:hover {
   color: #065b83;
   text-decoration: underline;
-} */
+}
 
 /* HEIGHT / WIDTH UTILS */
-/* .w-100 {
+.w-100 {
   width: 100%;
 }
 
@@ -452,11 +452,11 @@ a:hover {
 
 .min-100-vw {
   min-width: 100vw;
-} */
+}
 
 /* MARGIN/PADDING UTILS */
 /* Margin - all sides */
-/* .m-0 {
+.m-0 {
   margin: 0;
 }
 
@@ -485,7 +485,7 @@ a:hover {
 }
 
 /* Margin-bottom */
-/* .mb-0 {
+.mb-0 {
   margin-bottom: 0;
 }
 
@@ -511,10 +511,10 @@ a:hover {
 
 .mb-auto {
   margin-bottom: auto;
-} */
+}
 
 /* Margin-top */
-/* .mt-0 {
+.mt-0 {
   margin-top: 0;
 }
 
@@ -540,10 +540,10 @@ a:hover {
 
 .mt-auto {
   margin-top: auto;
-} */
+}
 
 /* Margin-right */
-/* .mr-0 {
+.mr-0 {
   margin-right: 0;
 }
 
@@ -569,10 +569,10 @@ a:hover {
 
 .mr-auto {
   margin-right: auto;
-} */
+}
 
 /* Margin-left */
-/* .ml-0 {
+.ml-0 {
   margin-left: 0;
 }
 
@@ -598,10 +598,10 @@ a:hover {
 
 .ml-auto {
   margin-left: auto;
-} */
+}
 
 /* Margin - x axis */
-/* .mx-0 {
+.mx-0 {
   margin-right: 0;
   margin-left: 0;
 }
@@ -634,10 +634,10 @@ a:hover {
 .mx-auto {
   margin-right: auto;
   margin-left: auto;
-} */
+}
 
 /* Margin - y axis */
-/* .my-0 {
+.my-0 {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -670,10 +670,10 @@ a:hover {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-} */
+}
 
 /* Padding - all sides */
-/* .p-0 {
+.p-0 {
   padding: 0;
 }
 
@@ -695,10 +695,10 @@ a:hover {
 
 .p-5 {
   padding: 1.625rem;
-} */
+}
 
 /* padding-bottom */
-/* .pb-0 {
+.pb-0 {
   padding-bottom: 0;
 }
 
@@ -720,10 +720,10 @@ a:hover {
 
 .pb-5 {
   padding-bottom: 1.625rem;
-} */
+}
 
 /* padding-top */
-/* .pt-0 {
+.pt-0 {
   padding-top: 0;
 }
 
@@ -745,10 +745,10 @@ a:hover {
 
 .pt-5 {
   padding-top: 1.625rem;
-} */
+}
 
 /* padding-right */
-/* .pr-0 {
+.pr-0 {
   padding-right: 0;
 }
 
@@ -770,10 +770,10 @@ a:hover {
 
 .pr-5 {
   padding-right: 1.625rem;
-} */
+}
 
 /* padding-left */
-/* .pl-0 {
+.pl-0 {
   padding-left: 0;
 }
 
@@ -795,10 +795,10 @@ a:hover {
 
 .pl-5 {
   padding-left: 1.625rem;
-} */
+}
 
 /* padding - x axis */
-/* .px-0 {
+.px-0 {
   padding-right: 0;
   padding-left: 0;
 }
@@ -826,10 +826,10 @@ a:hover {
 .px-5 {
   padding-right: 1.625rem;
   padding-left: 1.625rem;
-} */
+}
 
 /* Padding - y axis */
-/* .py-0 {
+.py-0 {
   padding-top: 0;
   padding-bottom: 0;
 }
@@ -913,10 +913,10 @@ a:hover {
 
 .text-link {
   color: #1b89bc !important;
-} */
+}
 
 /* BACKGROUND UTILS */
-/* .bg-primary {
+.bg-primary {
   background-color: #2d3e50 !important;
 }
 
@@ -949,7 +949,7 @@ a:hover {
 }
 
 /* DISPLAY */
-/* .display-none {
+.display-none {
   display: none !important;
 }
 
@@ -1173,10 +1173,10 @@ form [type='radio'] {
 
 .container.container-fluid {
   width: 92%;
-} */
+}
 
 /* FLEX CONTENT */
-/* .flex-row {
+.flex-row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -1326,10 +1326,10 @@ form [type='radio'] {
 .col-12 {
   flex: 0 0 100%;
   max-width: 100%;
-} */
+}
 
 /* col-sm */
-/* @media screen and (min-width: 640px) {
+@media screen and (min-width: 640px) {
   .col-sm-auto {
     flex-grow: 1;
     flex-basis: 0;
@@ -1421,10 +1421,10 @@ form [type='radio'] {
   .align-content-center-sm {
     align-content: center;
   }
-} */
+}
 
 /* col-md */
-/* @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .col-md-auto {
     flex-grow: 1;
     flex-basis: 0;
@@ -1516,10 +1516,10 @@ form [type='radio'] {
   .align-content-center-md {
     align-content: center;
   }
-} */
+}
 
 /* col-lg */
-/* @media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) {
   .col-md-auto {
     flex-grow: 1;
     flex-basis: 0;
@@ -1611,10 +1611,10 @@ form [type='radio'] {
   .align-content-center-lg {
     align-content: center;
   }
-} */
+}
 
 /* col-xl */
-/* @media screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .col-xl-1 {
     flex: 0 0 8.33333%;
     max-width: 8.33333%;
@@ -1702,4 +1702,4 @@ form [type='radio'] {
   .align-content-center-xl {
     align-content: center;
   }
-} */
+}
