--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,11 +4,11 @@
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
+        <label for="email-login">Email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
+        <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
@@ -21,20 +21,20 @@
 
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
+        <label for="name-signup">Name:</label>
         <input class="form-input" type="text" id="name-signup" />
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
+        <label for="email-signup">Email:</label>
         <input class="form-input" type="text" id="email-signup" />
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
+        <label for="password-signup">Password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <label for="phone-number-signup">phone number: format: xxx-xxx-xxxx</label>
-        <input class="form-input" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" id="phone-number-signup" />
+        <label for="phone-number-signup">Phone Number: xxx-xxx-xxxx</label>
+        <input class="form-input" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" id="phone-number-signup"/>
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
