--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,7 +43,7 @@
         >Make A Request</button>
         <button
           class='btn btn-primary fillRequest'
-          onclick="location.href='/fill-request'"
+          onclick="location.href='/'"
         >Fill A Request</button>
       </h2>
     </div>
@@ -53,7 +53,7 @@
     </main>
     <footer>
       <div class='text-center'>
-        <p>Curious about the code? Check out our project at<a href='https://github.com/Conartisttt/Off-Road-Unstucker'>GitHub</a>!</p>
+        <p>Curious about the code? Check out our project at <a href='https://github.com/Conartisttt/Off-Road-Unstucker'>GitHub</a>!</p>
       </div>
     </footer>
 
