--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -17,7 +17,13 @@
     </ul>
   </div>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  {{#if logged_in}}
   <p>
     <button class="btn btn-primary">Accept this Mission</button>
   </p>
+  {{else}}
+      <button class="btn btn-primary" onclick="location.href='/login'">Accept this Mission</button>
+
+  {{/if}}
+
 </div>
