--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,11 +3,11 @@
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      <a href="/post/{{post.id}}">{{post.name}}</a>
+      <div class="post-btn"><button type="post-button" onclick="location.href='/post/{{post.id}}'">{{post.name}}</button></div>
     </h2>
     <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
   </div>
-  <div class="col-md-7">
+  <div class="col-md-7 post-desc">
     <p>
       {{post.description}}
     </p>
