--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Off The Beaten Path!</title>
     {{! <link rel="stylesheet" href="/css/jass.css"> }}
-    <link
-      rel='stylesheet'
-      href='https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css'
-      integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh'
-      crossorigin='anonymous'
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel='stylesheet' href='/css/style.css' />
   </head>
 
@@ -18,10 +13,9 @@
     <header class='text-center'>
       <div class='row'>
         <div class='col'></div>
-        <div class='col'><button class='header' onclick="location.href='/'">Off
-            The Beaten Path!</button></div>
+        <div class='col'><button class='header' onclick="location.href='/'">Off The Beaten Path!</button></div>
         <div class='col text-end'>{{#if logged_in}}
-            <a href='/profile'>profile</a>
+            <div><button class='profile-btn' onclick="location.href='/profile'">profile</div></button>
             <button class='logout-button' id='logout'>logout</button>
           {{else}}
             <button class='login-button'onclick="location.href='/login'">login</button>
