--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,6 +1,12 @@
+<div class="d-flex justify-content-center">
 <div class="text-center">
+  <div class="title">
   <h2>{{name}}</h2>
+  </div>
+  <div class="description">
   <p>{{description}}</p>
+  </div>
+  <div class="other-info">
   <p>Preferred Contact Method: {{contact_method}}</p>
   <div>
     <p>Contact Details:</p>
@@ -17,7 +23,14 @@
     </ul>
   </div>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  {{#if logged_in}}
   <p>
     <button class="btn btn-primary">Accept this Mission</button>
   </p>
+  {{else}}
+      <button class="btn btn-primary" onclick="location.href='/login'">Accept this Mission</button>
+
+  {{/if}}
+</div>
+</div>
 </div>
