--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
     <form class="form login-form">
       <div class="form-group">
         <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <input class="form-input" type="email" id="email-login" />
       </div>
       <div class="form-group">
         <label for="password-login">Password:</label>
@@ -26,11 +26,11 @@
       </div>
       <div class="form-group">
         <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input class="form-input" type="email" id="email-signup" />
       </div>
       <div class="form-group">
         <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <input class="form-input" type="password" id="password-signup" minlength="8" />
       </div>
       <div class="form-group">
         <label for="phone-number-signup">Phone Number: xxx-xxx-xxxx</label>
