Added .hide to CSS, pulled over missing pieces from postRoutes.js and profile.js files

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -246,6 +246,10 @@ button:not(:disabled) {
   border-radius: 7px;
 }
 
+.hide {
+  display: none;
+}
+
 /* Add a media query to adjust styles for smaller screens */
 @media (max-width: 767px) {
   .display-boxes {
