--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,42 @@
-<div class="row">
-  <div class="col-md-6">
+<div class="display-boxes row text-center">
+  <div class="login col-md-6">
     <h2>Login</h2>
 
     <form class="form login-form">
-      <div class="form-group">
+      <div class="form-groups">
         <label for="email-login">Email:</label>
         <input class="form-input" type="email" id="email-login" />
       </div>
-      <div class="form-group">
+      <div class="form-groups">
         <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
-      <div class="form-group">
+      <div class="form-groups">
         <button class="btn btn-primary" type="submit">login</button>
       </div>
     </form>
   </div>
-  <div class="col-md-6">
+  <div class="signup  col-md-6">
     <h2>Signup</h2>
 
     <form class="form signup-form">
-      <div class="form-group">
+      <div class="form-groups">
         <label for="name-signup">Name:</label>
         <input class="form-input" type="text" id="name-signup" />
       </div>
-      <div class="form-group">
+      <div class="form-groups">
         <label for="email-signup">Email:</label>
         <input class="form-input" type="email" id="email-signup" />
       </div>
-      <div class="form-group">
+      <div class="form-groups">
         <label for="password-signup">Password:</label>
         <input class="form-input" type="password" id="password-signup" minlength="8" />
       </div>
-      <div class="form-group">
+      <div class="form-groups">
         <label for="phone-number-signup">Phone Number: xxx-xxx-xxxx</label>
         <input class="form-input" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" id="phone-number-signup"/>
       </div>
-      <div class="form-group">
+      <div class="form-groups">
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
     </form>
