--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,6 +1,7 @@
 <div class="text-center">
   <h2>{{name}}</h2>
   <p>{{description}}</p>
+
   <p>Preferred Contact Method: {{contact_method}}</p>
   <div>
     <p>Contact Details:</p>
@@ -25,5 +26,55 @@
       <button class="btn btn-primary" onclick="location.href='/login'">Accept this Mission</button>
 
   {{/if}}
+<div id="map">
+<script>
+    function initMap() {
+        var options = {     
+            zoom: 10,
+            center: { lat: , lng: }
+        }
+        const locationButton = document.createElement("button");
+
+  locationButton.textContent = "Pan to Current Location";
+  locationButton.classList.add("custom-map-control-button");
+  map.controls[google.maps.ControlPosition.TOP_CENTER].push(locationButton);
+  locationButton.addEventListener("click", () => {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(
+        (position) => {
+          const pos = {
+            lat: position.coords.latitude,
+            lng: position.coords.longitude,
+          };
+
+          infoWindow.setPosition(pos);
+          infoWindow.setContent("Location found.");
+          infoWindow.open(map);
+          map.setCenter(pos);
+        },
+        () => {
+          handleLocationError(true, infoWindow, map.getCenter());
+        },
+      );
+    } else {
+      handleLocationError(false, infoWindow, map.getCenter());
+    }
+  });
+}
+
+function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+  infoWindow.setPosition(pos);
+  infoWindow.setContent(
+    browserHasGeolocation
+      ? "Error: The Geolocation service failed."
+      : "Error: Your browser doesn't support geolocation.",
+  );
+  infoWindow.open(map);
+}
+
+window.initMap = initMap;
+    
+</script>
+</div>
 
 </div>
