--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -24,9 +24,8 @@
   </div>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   {{#if logged_in}}
-  <p>
-    <button class="btn btn-primary">Accept this Mission</button>
-  </p>
+  <button id="acceptMissionBtn" class="btn btn-primary" >Accept this Mission</button>
+      <input id="post_id" type="hidden" value="{{id}}">
   {{else}}
       <button class="btn btn-primary hover-effect" onclick="location.href='/login'">Accept this Mission</button>
 
@@ -34,3 +33,4 @@
 </div>
 </div>
 </div>
+<script src="../js/post.js" defer></script>
