fix lots of bugs and my sloppy code

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -198,6 +198,10 @@ button:not(:disabled) {
   margin: 15px;
 }
 
+li {
+  list-style-type: none;
+}
+
 #update {
   background-color: var(--yellow);
 }
