--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
     <h2>
       <div class="post-btn "><button class="hover-effect" type="post-button" onclick="location.href='/post/{{post.id}}'">{{post.name}}</button></div>
     </h2>
-    <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
+    <p>Created by {{post.userPost.name}} on {{format_date post.date_created}}</p>
   </div>
   <div class="col-md-7 post-desc">
     <p>
