--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -11,8 +11,8 @@
   <div>
     <p>Contact Details:</p>
     <ul>
-      <li>Email: {{user.email}}</li>
-      <li>Phone: {{user.phone}}</li>
+      <li>Email: {{userPost.email}}</li>
+      <li>Phone: {{userPost.phone}}</li>
     </ul>
   </div>
   <div>
@@ -22,7 +22,7 @@
       <li>Model: {{vehicle_model}}</li>
     </ul>
   </div>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  <p>Created by {{userPost.name}} on {{format_date date_created}}</p>
   {{#if logged_in}}
   <button id="acceptMissionBtn" class="btn btn-primary" >Accept this Mission</button>
       <input id="post_id" type="hidden" value="{{id}}">
