--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,6 +7,25 @@
     </h2>
     <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
   </div>
+  <section class="modal hidden">
+  <div class="flex">
+    <img src="user.png" width="50px" height="50px" alt="user" />
+    <button class="btn-close">⨉</button>
+  </div>
+  <div>
+    <h3>Stay in touch</h3>
+    <p>
+      'Register an account:'
+    </p>
+  </div>
+
+  <input type="email" id="email" placeholder="example@mail.com" />
+  <input type="password" id="password" placeholder="enter secure password" />
+  <button class="btn">Submit</button>
+</section>
+
+<div class="overlay hidden"></div>
+<button class="btn btn-open">Open Modal</button>
   <div class="col-md-7 post-desc">
     <p>
       {{post.description}}
