redirect update button

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -71,7 +71,7 @@
               value="{{post.vehicle_model}}" />
           </div>
           <div class="form-grouped col-sm-6 col-md-9">
-            <button id="update-btn" type="submit" class="btn btn-primary" data-id="{{post.id}}">Update</button>
+            <button id="update-btn" type="submit" class="btn btn-primary" data-id="{{post.id}}" onclick="/profile">Update</button>
           </div>
       </form>
     </div>
